services/k8s/feed-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: feed
  name: feed-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: feed
  type: LoadBalancer
