services/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feed-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
   - host: bpapp.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feed-service
            port:
              number: 3000
